--- a/task_1.html
+++ b/task_1.html
@@ -6,14 +6,22 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
             margin: 20px;
+        }
+        .profile-photo {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .profile-photo img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 3px solid #ccc;
         }
         table {
             width: 60%;
             border-collapse: collapse;
             margin: auto;
-            background-color: #fff;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         td, th {
@@ -21,28 +29,32 @@
             padding: 12px;
             text-align: center;
         }
-        th {
-            background-color: #e6e6e6;
-        }
+        
     </style>
 </head>
 <body>
 
-    <h1 style="text-align: center;">My Personal Web Page</h1>
+    <h1 style="text-align: center;">My Profile</h1>
+
+    <div class="profile-photo">
+        <img src="nabil.jpg" alt="My Photo">
+    </div>
 
     <table>
         <tr>
-            <th colspan="2">My Information</th>
+            <th colspan="2">My Biography</th>
         </tr>
         <tr>
-            <td rowspan="3"><img src="https://via.placeholder.com/100" alt="My Photo"></td>
-            <td><strong>Name:</strong> John Doe</td>
+            <td><strong>Name:</strong></td>
+            <td>MUHAMMAD NABIL BIN HAIRUL IZAD</td>
         </tr>
         <tr>
-            <td><strong>Student ID:</strong> 12345678</td>
+            <td><strong>Student ID:</strong></td>
+            <td>AI230138</td>
         </tr>
         <tr>
-            <td><strong>Course:</strong> BIT34103 - Mobile Application Development</td>
+            <td><strong>Course:</strong></td>
+            <td>BIT34103 - Mobile Application Development</td>
         </tr>
         <tr>
             <th colspan="2">Hobbies</th>
@@ -50,19 +62,19 @@
         <tr>
             <td colspan="2">
                 <ul style="text-align: left;">
-                    <li>Reading tech blogs</li>
-                    <li>Playing badminton</li>
-                    <li>Coding mini projects</li>
+                    <li>Playing Games</li>
+                    <li>Watching Anime</li>
+                    <li>Reading Manwha</li>
                 </ul>
             </td>
         </tr>
         <tr>
             <th colspan="2">Social Media</th>
-        </tr>   
+        </tr>
         <tr>
             <td colspan="2">
-                <a href="https://github.com/yourusername" target="_blank">GitHub</a> |
-                <a href="https://www.linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+                <a href="https://www.tiktok.com/@sushinomnomm?is_from_webapp=1&sender_device=pc" target="_blank">Tiktok</a> |
+                <a href="https://www.instagram.com/muhdnabil._/" target="_blank">Instagram</a>
             </td>
         </tr>
     </table>
